# CA_FP2

./: .gitignore
CA_FP2/: .dockerignore  Dockerfile  docker-compose.yml  run
CA_FP2/FP2/outcome/: fp2_final_report.csv  fp2_submission_check.csv  fp2_submission_check_errors.csv  fp2_verify_correctness.csv
CA_FP2/FP2/submission_example/CA_FP2_G01/weights_G01/: memory_map_sim_G01.json
CA_FP2/FP2/submission_example/CA_FP2_G02/weights_G02/: memory_map_sim_G02.json
CA_FP2/FP2/submission_example/CA_FP2_G03/: core_60_G03.csv
CA_FP2/FP2/submission_example/CA_FP2_G03/weights_G03/: memory_map_sim_G03.json
CA_FP2/FP2/submission_example/CA_FP2_G04/: core_0_G04.csv  student_hw_G04.h
CA_FP2/FP2/submission_example/CA_FP2_G04/weights_G04/: memory_map_sim_G04.json
CA_FP2/FP2/submission_g01/CA_FP2_G01/: core_0_G01.csv  core_1_G01.csv  core_2_G01.csv  core_3_G01.csv  core_4_G01.csv  core_5_G01.csv  core_6_G01.csv  core_7_G01.csv  core_8_G01.csv  core_9_G01.csv  student_hw_G01.h
CA_FP2/FP2/submission_g01/CA_FP2_G01/weights_G01/: memory_map_sim_G01.json
CA_FP2/SystemC/DRAM_json/: input_tensor.txt
CA_FP2/SystemC/include/: Array.h  Core_Controller.h  DMA_Controller.h  NoC.h  Router.h  Simulator.h  Tcore.h  Vector.h  baseline_hw.h  hw_config_selector.h  mem_types.h  rope_table_official_hf_pos0_127_d64_f32.h
CA_FP2/SystemC/test_tool/: CMakeLists.txt  main.cpp
CA_FP2/TA/: 00_check_fp2_naming.py  03_Compile_Execution.sh  04_verify.py  05_profit_batch.py  06_tar_submit.sh  09_clean.sh  TA_eval_profit.py
CA_FP2/TA/pattern/: output_tensor.txt
CA_FP2/scripts/: check_generated_weights.py  generate_fp2_instructions.py  generate_fp2_weights.py
FP2_model/: workload_config.json
FP2_model/mlp_weights/mlp_9/: model_9.pt
